--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x]
+        os: [ubuntu-latest , Windows-2016]
 
     steps:
     - uses: actions/checkout@v2
