--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -3,3 +3,13 @@ on: pull_request_review
 jobs:
   labelWhenApproved:
     runs-on: ubuntu-latest
+    steps:
+      - name: Label
+      - uses:  pullreminders/label-when-approved-action
+      - env:
+          APPROVALS: 1
+          GITHUB_TOKEN: test
+          ADD_LABEL: 5
+        
+    
+       
